# learn-wgpu

./: Cargo.toml
assets/anime/source/: Kaede_T4_9922.glb
src/: application.rs  camera.rs  input.rs  logging.rs  main.rs  model.rs  model_renderer.rs  model_shader.wgsl  shader.wgsl  texture.rs  uniform_state.rs
