[package]
name = "learn-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1.0.0"
winit = { version = "0.30.3" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wgpu = "22.0.0"
pollster = "0.3.0"
bytemuck = { version = "1.16.1", features = ["derive"] }
gltf = "1.4.1"
anyhow = "1.0.86"
cgmath = "0.18.0"

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
tracing-subscriber-wasm = "0.1.0"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "Window", "Element"] }
web-time = "1.1.0"

[profile.release]
debug = true
